atualizacoes para corrigir erros e melhor o funcionamento